objects/MedPro_State_Licenses__c.object
<CustomObject>
    <description>State license records related to a particular NPI.</description>
    <fields>
        <fullName>Expiration_date__c</fullName>
        <label>Expiration date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduation_Year__c</fullName>
        <label>Graduation Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Practice_Name__c</fullName>
        <label>Group Practice Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_eligiblility__c</fullName>
        <label>License eligiblility</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_state__c</fullName>
        <label>License state</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_type__c</fullName>
        <label>License type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Literal_License_Status__c</fullName>
        <label>Literal License Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MP_Accountid__c</fullName>
        <description>Account ID to be used by MedPro to evaluate and create affiliations for Contact records.</description>
        <label>MP_Accountid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MP_Contactid__c</fullName>
        <description>Contact ID used to create contacts during the MedPro processes.</description>
        <label>MP_Contactid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MP_NPI_Active__c</fullName>
        <label>NPI Active</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MP_NPI_City__c</fullName>
        <label>NPI City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MP_NPI_Number__c</fullName>
        <externalId>true</externalId>
        <label>NPI Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MP_NPI_State__c</fullName>
        <label>NPI State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MP_No_NPI__c</fullName>
        <formula>if(NOT(ISBLANK( MP_NPI_Number__c )),  false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No NPI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MP_PECOS_O_R__c</fullName>
        <label>PECOS O&amp;R</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MP_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to trigger MedPro-related workflows in support of Guardant processes.</description>
        <label>MP_Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedPro_Last_Update__c</fullName>
        <label>MedPro Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPI_First_Name__c</fullName>
        <label>NPI First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Last_Name__c</fullName>
        <label>NPI Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NPI Record</label>
        <referenceTo>NPI_Records__c</referenceTo>
        <relationshipLabel>MedPro State Licenses</relationshipLabel>
        <relationshipName>MedPro_State_Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overall_license_eligibility__c</fullName>
        <formula>if( AND(NOT(ISBLANK(State_license_number__c)),  License_eligiblility__c = &quot;Y&quot;,  Expiration_date__c &gt;  TODAY() ), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall license eligibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sanction_1_Affects_Eligibility__c</fullName>
        <label>Sanction 1 Affects Eligibility</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sanction_1_Date__c</fullName>
        <label>Sanction 1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sanction_2_Affects_Eligibility__c</fullName>
        <label>Sanction 2 Affects Eligibility</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sanction_2_Date__c</fullName>
        <label>Sanction 2 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sanction_3_Affects_Eligibility__c</fullName>
        <label>Sanction 3 Affects Eligibility</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sanction_3_Date__c</fullName>
        <label>Sanction 3 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sanction_Source_1__c</fullName>
        <label>Sanction Source 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sanction_Source_2__c</fullName>
        <label>Sanction Source 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sanction_Source_3__c</fullName>
        <label>Sanction Source 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sanction_Type_1__c</fullName>
        <label>Sanction Type 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sanction_Type_2__c</fullName>
        <label>Sanction Type 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sanction_Type_3__c</fullName>
        <label>Sanction Type 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_license_number__c</fullName>
        <label>State license number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>medproid__c</fullName>
        <externalId>true</externalId>
        <label>medproid</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>MedPro State License</label>
    <listViews>
        <fullName>All</fullName>
        <columns>medproid__c</columns>
        <columns>NAME</columns>
        <columns>Expiration_date__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>License_state__c</columns>
        <columns>License_type__c</columns>
        <columns>MedPro_Last_Update__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SLN-{00000000}</displayFormat>
        <label>MedPro State Licenses Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MedPro State Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>